[project]
name = "datyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "openai>=2.21.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
